syntax = "proto3";

import "google/protobuf/timestamp.proto";

package todo;

option go_package = "api/todo-list";

service ToDoService {
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);
  rpc GetTask(GetTaskRequest) returns (GetTaskResponse);
  rpc ListTasks(ListTasksRequest) returns (ListTasksResponse);
  rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse);
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse);
}

message Task {
  int64 task_id = 1;
  string title = 2;
  string description = 3;
  bool is_completed = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
}

message CreateTaskResponse {
  Task task = 1;
}

message GetTaskRequest {
  int64 task_id = 1;
}

message GetTaskResponse {
  Task task = 1;
}

message ListTasksRequest {}

message ListTasksResponse {
  repeated Task tasks = 1;
}

message UpdateTaskRequest {
  int64 task_id = 1;
  optional string title = 2;
  optional string description = 3;
  optional bool is_completed = 4;
}

message UpdateTaskResponse {
  Task task = 1;
}

message DeleteTaskRequest {
  int64 task_id = 1;
}

message DeleteTaskResponse {}